--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
 }
 
@@ -49,22 +50,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //hilt
-    implementation "com.google.dagger:hilt-android:2.35"
-    kapt "com.google.dagger:hilt-compiler:2.35"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.31-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.30.1-alpha"
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha03'
+    //implementation "com.google.dagger:hilt-android-testing:$hilt_ver"
+    implementation "androidx.hilt:hilt-common:1.0.0-alpha03"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     //sdp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
-
-    // Coroutine Lifecycle Scopes
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
 
     // Retrofit + GSON
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -76,12 +76,25 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+
+    // Navigation Components
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+
 
     // activity & fragment ktx
-    implementation "androidx.fragment:fragment-ktx:1.3.4"
-    implementation "androidx.activity:activity-ktx:1.3.0-beta01"
+    implementation "androidx.fragment:fragment-ktx:1.3.5"
+    implementation "androidx.activity:activity-ktx:1.3.0-beta02"
     implementation 'androidx.appcompat:appcompat:1.4.0-alpha02'
 
+    // glide for image
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    kapt "com.github.bumptech.glide:compiler:4.12.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //preferences
+    implementation 'androidx.preference:preference-ktx:1.1.1'
+    // Preference DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha06"
 
 }
